Safari: Ensure .blag-date doesn't become multiline on small screens

--- a/stylesheets/malthe.css
+++ b/stylesheets/malthe.css
@@ -46,6 +46,8 @@ ul {
   }
 }
 #blag-list .blag-date {
+  flex-shrink: 0;
+
   padding-top: 2px; /* Align with link in different font */
   padding-right: 16px;
 }
